--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightsteelblue"
+    android:background="@color/seagreen"
     tools:context=".Home">
 
     <ImageView
@@ -15,8 +15,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.1"
-        android:layout_width="50dp"
-        android:layout_height="50dp"/>
+        android:layout_width="60dp"
+        android:layout_height="60dp"/>
 
     <TextView
         android:id="@+id/Titulo"
@@ -27,21 +27,22 @@
         android:text=" GUATAPÉ"
         android:textStyle="bold"
         android:textSize="22dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintVertical_bias="0.1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <Button
         android:id="@+id/botonhoteles"
-        android:backgroundTint="@color/dimgray"
+        android:background="@drawable/botonredondo"
+        android:backgroundTint="@color/colorAccent"
         android:text="HOTELES"
         android:layout_marginHorizontal="40dp"
         app:layout_constraintTop_toBottomOf="@id/Titulo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintVertical_bias="0.1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -54,7 +55,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintVertical_bias="0.1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -67,10 +68,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintVertical_bias="0.1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
